+[docs] Update docs

--- a/docs/odoc.css
+++ b/docs/odoc.css
@@ -231,7 +231,8 @@ h4 code, h4 tt {
 /* Preformatted and code */
 
 tt, code, pre {
-  font-family: Menlo, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
+  font-family: "Fira Code", Menlo, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
+	font-variant-ligatures: contextual;
   font-weight: normal;
   font-size: 0.95em
 }
