+[docs] Add FiraCode from CDN

--- a/docs/odoc.css
+++ b/docs/odoc.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+@import url(https://cdn.rawgit.com/tonsky/FiraCode/1.205/distr/fira_code.css);
+
 /* Copyright (c) 2016 Daniel C. Bünzli. All rights reserved.
    Distributed under the ISC license, see terms at the end of the file.
    %%NAME%% %%VERSION%% */
