--- a/docs/odoc.css
+++ b/docs/odoc.css
@@ -1,9 +1,13 @@
 @charset "UTF-8";
-@import url(https://cdn.rawgit.com/tonsky/FiraCode/1.205/distr/fira_code.css);
-
 /* Copyright (c) 2016 Daniel C. Bünzli. All rights reserved.
    Distributed under the ISC license, see terms at the end of the file.
-   %%NAME%% %%VERSION%% */
+   odoc v1.1.1-775-gab866a13 */
+
+/* Fonts */
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400,500');
+@import url('https://fonts.googleapis.com/css?family=Noticia+Text:400,400i,700');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,500,500i,600,600i,700,700i');
+
 
 /* Reset a few things. */
 
@@ -29,32 +33,39 @@ table {
   box-sizing: border-box;
 }
 
+html {
+  font-size: 15px;
+}
+
 body {
-  font-family: Helvetica, "DejaVu Sans", Arial, sans-serif;
-  font-weight: 300;
-  font-size: 1em;
-  line-height: 1.5;
+  font-family: "Fira Sans", Helvetica, Arial, sans-serif;
   text-align: left;
   color: #333;
   background: #FFFFFF;
 }
 
 .content {
-  max-width: 80ex;
-  margin-left: calc(10% + 19ex);
+  max-width: 90ex;
+  margin-left: calc(10vw + 20ex);
   margin-right: 4ex;
   margin-top: 20px;
   margin-bottom: 50px;
+  font-family: "Noticia Text", Georgia, serif;
+  line-height: 1.5;
 }
 
 .content>header {
   margin-bottom: 30px;
 }
 
+.content>header nav {
+  font-family: "Fira Sans", Helvetica, Arial, sans-serif;
+}
+
 /* Basic markup elements */
 
 b, strong {
-  font-weight: 400;
+  font-weight: 500;
 }
 
 i, em {
@@ -75,21 +86,17 @@ sup, sub {
   margin-left: 0.2ex;
 }
 
-p {
-  margin-bottom: 0.5em;
-}
 pre {
-  margin: 1.5em 0;
+  margin-top: 0.8em;
+  margin-bottom: 1.2em;
 }
 
+p, ul, ol {
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+}
 ul, ol {
-  margin-top: 10px;
-  margin-bottom: 10px;
   list-style-position: outside
-}
-
-ul {
-  list-style-type: square
 }
 
 ul>li {
@@ -133,6 +140,7 @@ a:hover {
 *:target {
   background-color: rgba(187,239,253,0.3) !important;
   box-shadow: 0 0px 0 1px rgba(187,239,253,0.8) !important;
+  border-radius: 1px;
 }
 
 *:hover>a.anchor {
@@ -169,40 +177,42 @@ a.anchor {
 }
 
 .xref-unresolved {
-  box-shadow: 0 1px 0 0 red
+  color: #2C5CBD;
+}
+.xref-unresolved:hover {
+  box-shadow: 0 1px 0 0 #CC6666;
 }
 
 /* Section and document divisions.
    Until at least 4.03 many of the modules of the stdlib start at .h7,
    we restart the sequence there like h2  */
 
-section > header {
-  margin-bottom: 30px;
-}
-
 h1, h2, h3, h4, h5, h6, .h7, .h8, .h9, .h10 {
-  font-weight: 600;
-  margin: 1em 0 0.5em;
+  font-family: "Fira Sans", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  margin: 0.5em 0 0.5em 0;
+  padding-top: 0.1em;
   line-height: 1.2;
   overflow-wrap: break-word;
 }
 
 h1 {
+  font-weight: 500;
   font-size: 2.441em;
   margin-top: 1.214em;
 }
 
-h2 {
+h1 {
+  font-weight: 500;
   font-size: 1.953em;
   box-shadow: 0 1px 0 0 #ddd;
-  padding-bottom: 0.1em;
 }
 
-h3 {
+h2 {
   font-size: 1.563em;
 }
 
-h4 {
+h3 {
   font-size: 1.25em;
 }
 
@@ -225,31 +235,35 @@ h3 code, h3 tt {
   font-weight: inherit;
 }
 
-h4 code, h4 tt {
+h3 code, h3 tt {
   font-size: inherit;
   font-weight: inherit;
 }
 
+h4 {
+  font-size: 1.12em;
+}
+
+
 /* Preformatted and code */
 
 tt, code, pre {
-  font-family: "Fira Code", Menlo, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
-	font-variant-ligatures: contextual;
-  font-weight: normal;
-  font-size: 0.95em
+  font-family: "Fira Code", "Fira Mono", courier;
+  font-weight: 400;
 }
 
 pre {
   padding: 0.1em;
   border: 1px solid #eee;
   border-radius: 5px;
+  overflow-x: auto;
 }
 
-p code {
+p code, li code {
   background-color: #f6f8fa;
   color: #0d2b3e;
-  border-radius: 5px;
-  padding: 0 0.5ex;
+  border-radius: 3px;
+  padding: 0 0.3ex;
 }
 
 p a > code {
@@ -259,56 +273,62 @@ p a > code {
 /* Code blocks (e.g. Examples) */
 
 pre code {
-  font-size: 0.90rem;
+  font-size: 0.893rem;
 }
 
 /* Code lexemes */
 
 .keyword {
-  font-weight: 500;
+  font-weight: 700;
 }
 
 /* Module member specification */
 
 .spec:not(.include), .spec.include details summary {
-  font-size: 0.95em;
   background-color: #f6f8fa;
   border-radius: 3px;
   border-left: 4px solid #5c9cf5;
   border-right: 5px solid transparent;
-  padding: 0.5em;
+  padding: 0.35em 0.5em;
 }
 
 .spec.include details summary:hover {
   background-color: #ebeff2;
 }
 
+dl, div.spec, .doc, aside {
+  margin-bottom: 20px;
+}
+
 /* Indent the second line in multiline spec definitions. */
 .spec:not(.type) > code {
-  display: inline-block;
+  display: block;
   padding-left: 4ex;
   text-indent: -4ex;
 }
 
+.spec.exception > code {
+  display: inline-block;
+}
+
 dl > dd {
-  padding: 0.75em;
-  padding-bottom: 0;
+  padding: 0.5em;
 }
 
 dd> :first-child {
   margin-top: 0;
 }
 
-dl, article, .doc, aside {
-  margin-bottom: 30px;
-}
-
-dl:last-child, aside:last-child, article:last-child {
+dl:last-child, dd> :last-child, aside:last-child, article:last-child {
   margin-bottom: 0;
 }
 
 dt+dt {
-  margin-top: 30px;
+  margin-top: 15px;
+}
+
+section+section, section > header + dl {
+  margin-top: 25px;
 }
 
 .spec.type .variant {
@@ -335,9 +355,9 @@ div.doc>*:first-child {
 }
 
 /* The elements other than heading should be wrapped in <aside> elements. */
-heading, body>p, body>ul, body>ol, h3, h4, body>pre {
-  margin-bottom: 16px;
-}
+/* heading, body>p, body>ul, body>ol, h3, h4, body>pre { */
+/*   margin-bottom: 30px; */
+/* } */
 
 /* Collapsible inlined include and module */
 
@@ -352,15 +372,16 @@ heading, body>p, body>ul, body>ol, h3, h4, body>pre {
   position: absolute;
   border-radius: 0 1ex 1ex 0;
   right: -20px;
-  top: 0;
-  bottom: 0;
+  top: 1px;
+  bottom: 1px;
   width: 15px;
   background: rgba(0, 4, 15, 0.05);
+  box-shadow: 0 0px 0 1px rgba(204, 204, 204, 0.53);
 }
 
 .spec.include details summary {
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   cursor: pointer;
   outline: none;
 }
@@ -564,9 +585,9 @@ h1+.modules, h1+.sel {
   display: block;
   content: "Topics";
   text-transform: uppercase;
-  font-size: 0.95em;
+  font-size: 1em;
   margin: 1.414em 0 0.5em;
-  font-weight: 600;
+  font-weight: 500;
   color: #777;
   line-height: 1.2;
 }
@@ -587,9 +608,12 @@ h1+.modules, h1+.sel {
 }
 
 .toc ul li a {
+  font-family: "Fira Sans", sans-serif;
   font-size: 0.95em;
   color: #333;
   font-weight: 400;
+  line-height: 1.6em;
+  display: block;
 }
 
 .toc ul li a:hover {
@@ -600,24 +624,28 @@ h1+.modules, h1+.sel {
 /* First level titles */
 
 .toc>ul>li>a {
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .toc li ul {
-  margin-top: 3px;
-  margin-left: 0;
+  margin: 0px;
 }
 
-.toc > ul {
+.toc ul {
   list-style-type: none;
 }
 
 .toc ul li {
   margin: 0;
 }
+.toc>ul>li {
+  margin-bottom: 0.3em;
+}
 
 .toc ul li li {
-  margin-left: 20px;
+  border-left: 1px solid #ccc;
+  margin-left: 5px;
+  padding-left: 12px;
 }
 
 /* Mobile adjustements. */
@@ -625,7 +653,7 @@ h1+.modules, h1+.sel {
 @media only screen and (max-width: 95ex) {
   .content {
     margin: auto;
-    padding: 2.5em;
+    padding: 2.0em;
   }
   .toc {
     position: static;
@@ -633,7 +661,7 @@ h1+.modules, h1+.sel {
     min-width: unset;
     max-width: unset;
     border: none;
-    padding: 0.2em 0.5em;
+    padding: 0.2em 1em;
     border-radius: 5px;
   }
 }
@@ -653,7 +681,7 @@ h1+.modules, h1+.sel {
 /* Syntax highlighting (based on github-gist) */
 
 .keyword {
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .hljs {
