+[docs] Restruct sections, add navigation

--- a/docs/odoc.css
+++ b/docs/odoc.css
@@ -65,7 +65,12 @@ body {
 /* Basic markup elements */
 
 b, strong {
+  font-family: "Fira Sans", Helvetica, Arial, sans-serif;
   font-weight: 500;
+  margin: 0.5em 0.7em 0.5em 0;
+  padding-top: 0.1em;
+  line-height: 1.2;
+  overflow-wrap: break-word;
 }
 
 i, em {
@@ -214,6 +219,10 @@ h2 {
 
 h3 {
   font-size: 1.25em;
+}
+
+h6 {
+  display: inline-block;
 }
 
 small, .font_small {
@@ -597,7 +606,7 @@ h1+.modules, h1+.sel {
   top: 0px;
   bottom: 0px;
   left: 0px;
-  max-width: 30ex;
+  max-width: 60ex;
   min-width: 26ex;
   width: 20%;
   background: #f6f8fa;
@@ -646,6 +655,19 @@ h1+.modules, h1+.sel {
   border-left: 1px solid #ccc;
   margin-left: 5px;
   padding-left: 12px;
+}
+
+.toc ol li p {
+  margin-bottom: 0px;
+}
+
+.toc ol ol {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.toc ol ol li {
+  margin-left: 14px;
 }
 
 /* Mobile adjustements. */
